// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render automatic tab 1`] = `
.c9 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #2C3A73;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  opacity: 0.4;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(0,0,0,0.5);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 8px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
              width="320px"
            >
              <label
                class="c10"
                font-size="0"
              >
                App Name
                <input
                  autocomplete="off"
                  class="c11"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="jenkins"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c12"
              width="100%"
            >
              <label
                class="c10"
                font-size="0"
              >
                INTERNAL APPLICATION URL
                <input
                  autocomplete="off"
                  class="c11"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="https://localhost:4000"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c13"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c14"
            >
              The script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          
        </div>
        <div
          class="c15"
        >
          <button
            class="c16"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c17"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render automatic tab on created state 1`] = `
.c9 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #2C3A73;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  opacity: 0.4;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(0,0,0,0.5);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 8px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
              width="320px"
            >
              <label
                class="c10"
                font-size="0"
              >
                App Name
                <input
                  autocomplete="off"
                  class="c11"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="jenkins"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c12"
              width="100%"
            >
              <label
                class="c10"
                font-size="0"
              >
                INTERNAL APPLICATION URL
                <input
                  autocomplete="off"
                  class="c11"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="https://localhost:4000"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c13"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c14"
            >
              The script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          
        </div>
        <div
          class="c15"
        >
          <button
            class="c16"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c17"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed automatic tab 1`] = `
.c15 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c15 a {
  color: #FFFFFF;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c11::-ms-clear {
  display: none;
}

.c11::placeholder {
  opacity: 0.4;
}

.c11:read-only {
  cursor: not-allowed;
}

.c11:disabled {
  color: rgba(0,0,0,0.5);
}

.c10 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 8px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  min-height: 254px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c16 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
              width="320px"
            >
              <label
                class="c10"
                font-size="0"
              >
                App Name
                <input
                  autocomplete="off"
                  class="c11"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="jenkins"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c12"
              width="100%"
            >
              <label
                class="c10"
                font-size="0"
              >
                INTERNAL APPLICATION URL
                <input
                  autocomplete="off"
                  class="c11"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="https://localhost:4000"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c13"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c14"
            >
              The script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          <div
            class="c15"
            kind="danger"
          >
            some error message
          </div>
          
        </div>
        <div
          class="c16"
        >
          <button
            class="c17"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c18"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with local user 1`] = `
.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c17 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c10"
            >
              <a
                class="c11"
                href="https://get.gravitational.com/teleport-5.0.0-dev.pkg"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c11"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 2
            </span>
             - Login to Teleport
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 3
            </span>
             - Generate a join token
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tctl tokens add --type=app
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 4
            </span>
             - Configure your teleport agent
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport configure --output=$HOME/.config/app_config.yaml --app-name=[example-app] --app-uri=http://localhost/ --roles=app --token=[generated-join-token] --auth-server=localhost:443 --data-dir=$HOME/.config
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c9"
            >
              Step 5
            </span>
             - Start the Teleport agent with the generated configuration file
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport start --config=$HOME/.config/app_config.yaml
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            * Note: For a self-hosted Teleport version, you may need to update DNS and obtain a TLS certificate for this application.
            Learn more about application access 
            <a
              class="c12"
              href="https://goteleport.com/docs/application-access/introduction/"
              rel="noreferrer"
              target="_blank"
            >
              here
            </a>
            .
          </div>
        </div>
        <div
          class="c17"
        >
          <button
            class="c18"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with sso user 1`] = `
.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c13 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c17 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c10"
            >
              <a
                class="c11"
                href="https://get.gravitational.com/teleport-5.0.0-dev.pkg"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c11"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 2
            </span>
             - Login to Teleport
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 3
            </span>
             - Generate a join token
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tctl tokens add --type=app
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 4
            </span>
             - Configure your teleport agent
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport configure --output=$HOME/.config/app_config.yaml --app-name=[example-app] --app-uri=http://localhost/ --roles=app --token=[generated-join-token] --auth-server=localhost:443 --data-dir=$HOME/.config
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c9"
            >
              Step 5
            </span>
             - Start the Teleport agent with the generated configuration file
            <div
              class="c13"
            >
              <div
                class="c14"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c15"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport start --config=$HOME/.config/app_config.yaml
                </div>
              </div>
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            * Note: For a self-hosted Teleport version, you may need to update DNS and obtain a TLS certificate for this application.
            Learn more about application access 
            <a
              class="c12"
              href="https://goteleport.com/docs/application-access/introduction/"
              rel="noreferrer"
              target="_blank"
            >
              here
            </a>
            .
          </div>
        </div>
        <div
          class="c17"
        >
          <button
            class="c18"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with token 1`] = `
.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #2C3A73;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c18:hover,
.c18:focus {
  background: #222C59;
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 4px;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c14 {
  box-sizing: border-box;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
}

.c19 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c10"
            >
              <a
                class="c11"
                href="https://get.gravitational.com/teleport-5.0.0-dev.pkg"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c11"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c8"
          >
            <span
              class="c9"
            >
              Step 2
            </span>
             - Configure your teleport agent
            <div
              class="c13"
            >
              The token will be valid for
               
              <span
                class="c9"
              >
                1 hour
                .
              </span>
            </div>
            <div
              class="c14"
            >
              <div
                class="c15"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport configure --output=$HOME/.config/app_config.yaml --app-name=[example-app] --app-uri=http://localhost/ --roles=app --token=join-token --auth-server=localhost:443 --data-dir=$HOME/.config
                </div>
              </div>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
            <div
              class="c10"
            >
              <a
                class="c18 c17"
                kind="primary"
              >
                Regenerate Token
              </a>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c9"
            >
              Step 3
            </span>
             - Start the Teleport agent with the configuration file
            <div
              class="c14"
            >
              <div
                class="c15"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport start --config=$HOME/.config/app_config.yaml
                </div>
              </div>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c19"
        >
          <button
            class="c20"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
